# py-labar

./: .gitignore  LICENSE  PROD.env  README.md  TEST.env  devonmain.py  examplemain.py  logging.yaml  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: auto_assign.yml
app/: __init__.py  api.py  database.py  exampleapi.py  main.py  show_users.py  text.py
app/business/: __init__.py  examplerouter.py  router.py
app/business/controllers/: __init__.py  controller.py  exampletodo.py  user_controller.py
app/business/groups/: __init__.py  router.py
app/business/groups/controllers/: __init__.py  group.py
app/business/groups/models/: __init__.py  group.py
app/business/groups/services/: __init__.py  group.py
app/business/models/: __init__.py
app/business/services/: __init__.py  user_service.py
app/business/topics/: __init__.py  router.py
app/business/topics/controllers/: __init__.py  topic.py
app/business/topics/models/: __init__.py  topic.py  vote.py
app/business/topics/services/: __init__.py  topic.py  vote.py
app/business/users/: __init__.py  router.py
app/business/users/controllers/: __init__.py  user.py  user_api.py  user_views.py
app/business/users/models/: __init__.py  user.py
app/business/users/services/: __init__.py  user.py
app/common/: __init__.py  exampleutils.py  utils.py
app/common/base/: base_repository.py
app/common/core/: __init__.py  security.py
app/common/infra/: __init__.py  database.py  examplesql_adaptors.py  sql_adaptors.py
app/common/infra/gcp/: cloud_storage.py
app/domain/: __init__.py
app/domain/groups/: __init__.py
app/domain/groups/models/: __init__.py  group.py
app/domain/groups/repositories/: __init__.py  group.py
app/domain/models/: models.py
app/domain/repositories/: todo.py
app/domain/schemas/: user.py
app/domain/topics/: __init__.py
app/domain/topics/models/: __init__.py  topic.py  vote.py
app/domain/users/: __init__.py
app/templates/: index.html
static/: __init__.py
templates/: MultipleChoiceText.html  __init__.py  base.html  confirm_delete_modal.html  create_group.html  create_group_popup.html  error.html  error_vote_message.html  forgot_password.html  home.html  index.html  items.html  login-base.html  login.html  login_base.html  modal_resultados.html  modal_results.html  modal_votation.html  modify_topic.html  multiple_choice_text.html  new_topic.html  newtopic.html  rating.html  register.html  registration_successful.html  users.html  users_group.html  usersgroup.html
templates/atic/: error.html  login_base.html  modify_topic.html
templates/partials/: topics_partial.html
test/business/services/: test_user.py
tests/: test_user_service.py
tests/cypress/: cypress.config.js
(+12 files in other folders)
