[tool.poetry]
name = "pylabar"
version = "0.1.0"
description = "py-labar is a fast and convenient way to get the opinion of people on various topics, implemented in Python"
authors = ["Andres Sanchez Rodriguez <andres.sanchez-rodriguez@capgemini.com>",
    "Paola Patricia Vargas Chocron <paola-patricia.vargas-chocron@capgemini.com>",
    "Juan Jose Arbona Alapont <juan-jose.arbona-alapont@capgemini.com>"]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
requests = "^2.28.0"
aiosqlite = "^0.17.0"
fastapi_keycloak = "^1.0.6"
firebase-admin = "^5.2.0"
sse-starlette = "^1.1.3"
protobuf = "3.20.1"
mypy = "^0.971"
coverage = "^6.4.3"
Pillow = "^9.2.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
fastapi = {extras = ["all"], version = "^0.104.1"}
pydantic = "^2.4.2"
sqlalchemy = "^2.0.22"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
