[tool.poetry]
name = "pylabar"
version = "0.1.0"
description = "py-labar is a fast and convenient way to get the opinion of people on various topics, implemented in Python"
authors = ["Andres Sanchez Rodriguez <andres.sanchez-rodriguez@capgemini.com>",
    "Paola Patricia Vargas Chocron <paola-patricia.vargas-chocron@capgemini.com>",
    "Juan Jose Arbona Alapont <juan-jose.arbona-alapont@capgemini.com>"]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.99.1"}
sqlmodel = "^0.0.6"
requests = "^2.28.0"
aiosqlite = "^0.17.0"
fastapi_keycloak = "^1.0.6"
firebase-admin = "^5.2.0"
sse-starlette = "^1.1.3"
protobuf = "3.20.1"
mypy = "^0.971"
coverage = "^6.4.3"
Pillow = "^9.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
